# IndieStudio

./: CMakeLists.txt  README.md  compile.sh
Assets/Champion/Blitzcrank/: blitz_death_animation.iqm  blitz_idle_animation.iqm  blitz_mesh.iqm  blitz_running_animation.iqm
Assets/Champion/Carlo/: Carlo.iqm  Carlo_death.iqm  Carlo_fast_run.iqm  Carlo_idle.iqm  Carlo_run.iqm
Assets/Champion/Crash/: Crash.iqm  Crash_death.iqm  Crash_fast_run.iqm  Crash_idle.iqm  Crash_run.iqm
Assets/Champion/Knight/: Death.iqm  Idle.iqm  Knight.iqm  Run.iqm
Assets/Champion/Krusty/: Krusty.iqm  Krusty_death.iqm  Krusty_fast_run.iqm  Krusty_idle.iqm
Assets/Champion/Plant/: death.iqm  idle.iqm  plant.iqm  run.iqm
Assets/Champion/Ralph/: Ralph.iqm  Ralph_death.iqm  Ralph_fast_run.iqm  Ralph_idle.iqm  Ralph_run.iqm
Assets/Champion/Spongebob/: Spongebob.iqm  Spongebob_death.iqm  Spongebob_fast_run.iqm  Spongebob_idle.iqm  Spongebob_run.iqm
Assets/Fleche/: fleche.mtl
Assets/MAP/: map
Assets/Taverne/: Tavern.mtl
Assets/animations/bomb2/: bomb.iqm  bomb_animation.iqm
Assets/animations/item/: power_up.iqm  power_up_animation.iqm
Assets/bricks/: Bricks.mtl
Assets/buton_font1/: untitled.mtl
Assets/explosion/: explosion.iqm
Assets/explosion/explosion/: explosion.iqm  explosion_animation.iqm
cmake/: Findraylib.cmake
config_files/: key_config.txt
doc/: readme.MD
saved/: save.txt
src/: ChangePath.cpp  ChangePath.hpp  Core.cpp  Core.hpp  main.cpp
src/ECS/: Components.hpp  ECS.cpp  ECS.hpp
src/ECS/Components/: Audio.cpp  Audio.hpp  BombComponent.cpp  BombComponent.hpp  BombermanAI.cpp  BombermanAI.hpp  BoxComponent.cpp  BoxComponent.hpp  BreakableWall.cpp  BreakableWall.hpp  ButtonComponent.cpp  ButtonComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  Champion.cpp  Champion.hpp  ExplosionComponent.cpp  ExplosionComponent.hpp  Model2DComponent.cpp  Model2DComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  Player.cpp  Player.hpp  PositionComponent.cpp  PositionComponent.hpp  PowerUpComponent.cpp  PowerUpComponent.hpp  Score.cpp  Score.hpp  ShaderComponent.cpp  ShaderComponent.hpp  TextComponent.cpp  TextComponent.hpp  TwoDComponent.cpp  TwoDComponent.hpp
src/ECS/Components/PowerUps/: BombUp.cpp  BombUp.hpp  ExploUp.cpp  ExploUp.hpp  SpeedUp.cpp  SpeedUp.hpp  StrenghtUp.cpp  StrenghtUp.hpp
src/encapsulation/: Event.cpp  Event.hpp  ManageButtons.cpp  ManageButtons.hpp  Window.cpp  Window.hpp
src/encapsulation/GameObject/Components/CMovable/: Player.cpp  Player.hpp
src/parsing/: Parsing.cpp  Parsing.hpp
src/scenes/: AScene.cpp  AScene.hpp  IScene.hpp  IncludeScene.hpp  SceneManager.cpp  SceneManager.hpp
src/scenes/createSave/: CreateSave.cpp  CreateSave.hpp
src/scenes/creditScene/: Credit.cpp  Credit.hpp
src/scenes/equalityScene/: Equality.cpp  Equality.hpp
src/scenes/finishGame/: FinishGame.cpp  FinishGame.hpp
src/scenes/inGame/: Game.cpp  Game.hpp
src/scenes/initScene/: initScene.cpp  initScene.hpp
src/scenes/loadSave/: LoadSave.cpp  LoadSave.hpp
src/scenes/loadingMenu/: Loading.cpp  Loading.hpp
src/scenes/mainMenu/: Menu.cpp  Menu.hpp
src/scenes/newGame/: CreateNewGame.cpp  CreateNewGame.hpp
src/scenes/optionsMenu/: Options.cpp  Options.hpp
src/scenes/pauseMenu/: Pause.cpp  Pause.hpp
